# gitops-lab

./: README.md
.github/workflows/: sample-api-ci.yaml
apps/argocd-managed/: kustomization.yaml
apps/argocd-managed/sample-api/: Dockerfile  Makefile  README.md  pyproject.toml
apps/argocd-managed/sample-api/deploy/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
apps/argocd-managed/sample-api/src/sample_api/: main.py
apps/argocd-managed/sample-api/src/sample_api/api/routes/: health.py
apps/argocd-managed/sample-api/src/sample_api/core/: config.py
apps/argocd-managed/sample-api/tests/: conftest.py  test_health.py
apps/argocd-managed/sample-fastapi/: deployment.yaml  ingress.yaml  service.yaml
apps/argocd-managed/sample-nginx/: deployment.yaml  ingress.yaml
apps/flux-managed/sample-nginx/: deployment.yaml
clusters/minikube/argocd/: app-of-apps.yaml
clusters/minikube/flux-system/: apps-source.yaml
